add file logging

--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "automation",
     "script",
     "ifttt"
-  ]
+  ],
+  "devDependencies": {
+    "lodash": "^4.17.21",
+    "simple-node-logger": "^18.12.24"
+  }
 }
